feat(plugin): 添加插件管理界面及重载功能

--- a/webui/static/pages/base-info.html
+++ b/webui/static/pages/base-info.html
@@ -56,6 +56,29 @@
         </div>
     </div>
 </div>
+<div id="plugin-info" class="secondary-container">
+    <div class="system-info-grid">
+        <!-- 插件数量 -->
+        <div class="system-info-item">
+            <div class="system-info-label">插件总数</div>
+            <div id="plugins-count" class="system-info-value">0</div>
+        </div>
+
+        <!-- 启用插件数量 -->
+        <div class="system-info-item">
+            <div class="system-info-label">启用插件</div>
+            <div id="enabled-plugins-count" class="system-info-value">0</div>
+        </div>
+
+        <!-- 重载插件按钮 -->
+        <div class="system-info-item">
+            <div class="system-info-label">&nbsp;</div>
+            <button id="reload-plugins-button" class="reload-button">
+                重载所有插件
+            </button>
+        </div>
+    </div>
+</div>
 <div id="hitokoto" class="secondary-container">
     <div id="hitokoto-content"></div>
     <div id="hitokoto-source">
