--- a/to_image/template.html
+++ b/to_image/template.html
@@ -151,6 +151,7 @@
             color: var(--color-on-surface);
         }
     </style>
+    {header}
 </head>
 
 <body>
@@ -160,6 +161,7 @@
             {content}
         </div>
     </div>
+    {script}
 </body>
 
 </html>
