feat(webui): 实现全面UI改进和安全增强
 - 添加新字体并更新CSS中的字体处理
 - 实现通知和日志详情的警告系统
 - 增强登录页面的样式和安全特性
 - 重构日志查看器，优化表格布局和详情视图
 - 添加会话管理和登录失败尝试跟踪
 - 改进Amia类中的WebSocket连接处理
 - 更新插件管理器，添加正确的启用/禁用功能

--- a/webui/static/pages/base-info.html
+++ b/webui/static/pages/base-info.html
@@ -79,7 +79,7 @@
         </div>
     </div>
 </div>
-<div id="hitokoto" class="secondary-container">
+<div id="hitokoto" class="secondary-container font">
     <div id="hitokoto-content"></div>
     <div id="hitokoto-source">
         <div id="hitokoto-from"></div>
