--- a/webui/static/pages/log-view.html
+++ b/webui/static/pages/log-view.html
@@ -6,7 +6,7 @@
             刷新日志
         </button>
         <button id="toggle-auto-refresh-button" class="auto-refresh-button">
-            自动刷新: 开启
+            自动刷新
         </button>
         <div id="log-filter-container">
             <label for="log-level-filter">日志级别：</label>
@@ -19,7 +19,7 @@
                 <option value="CRITICAL">CRITICAL</option>
             </select>
             <button id="toggle-web-logs-button" class="auto-refresh-button">
-                显示WebUI日志: 关闭
+                隐藏WebUI日志
             </button>
         </div>
         <div id="search-container">
