feat: 新增多项功能和改进
- 添加 OpenAI 集成，支持聊天补全 API
- 实现 CacheManager 以进行文件缓存
- 增强插件系统，提供更好的错误处理和命令触发器
- 改进内存使用显示，增加项目特定指标
- 添加新字体并改进 HTML 到图像的转换
- 扩展用户和群组功能，增加额外属性
- 更新构建脚本以处理多个插件
- 添加日志记录功能和使用情况跟踪
- 各种错误修复和代码改进

--- a/webui/static/pages/base-info.html
+++ b/webui/static/pages/base-info.html
@@ -25,6 +25,7 @@
             <div id="memory-usage" class="system-info-value"></div>
             <div class="system-info-bar">
                 <div id="memory-usage-bar" class="system-info-bar-fill"></div>
+                <div id="memory-usage-bar-project" class="system-info-bar-fill secondary"></div>
             </div>
         </div>
 
